--- a/webgl_loader_3ds.html
+++ b/webgl_loader_3ds.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <!-- <link type="text/css" rel="stylesheet" href="main.css"> -->
+    <link type="text/css" rel="stylesheet" href="main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js"></script>
     <!-- <script src="./OrbitControls.js"></script> -->
     <script src="./TDSLoader.js"></script>
@@ -70,14 +70,14 @@
 
         renderer = new THREE.WebGLRenderer();
         renderer.setPixelRatio(window.devicePixelRatio);
-        renderer.setSize(width, height);
+        renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.outputEncoding = THREE.sRGBEncoding;
         container.appendChild(renderer.domElement);
 
         controls = new THREE.TrackballControls( camera, renderer.domElement );
         // controls = new THREE.OrbitControls(camera);
 
-        // window.addEventListener("resize", resize);
+        window.addEventListener("resize", resize);
       }
 
       function resize() {
