--- a/webgl_loader_3ds.html
+++ b/webgl_loader_3ds.html
@@ -37,7 +37,7 @@
 
         camera = new THREE.PerspectiveCamera(
           60,
-          width / height,
+          window.innerWidth/window.innerHeight,
           0.1,
           10
         );
